2005-12-03  Roger While <simrw@sim-basis.de>

	* common.c : Do not gen signals for Ming
	* fileio.c : Ming / typing changes

2005-11-25  Roger While <simrw@sim-basis.de>

	* common.c : Extended signal handling
	  fileio.c : Don't use mkstemp on non-Win

2005-11-16  Roger While <simrw@sim-basis.de>

	* call.c : Fix wrong cached handle
	  fileio.c : Fix spacing in LS read

2005-11-15  Roger While <simrw@sim-basis.de>

	* fileio.c : Allow COB_SYNC=P (Paranoid)
	  This will try even harder to sync.

2005-11-15  Roger While <simrw@sim-basis.de>

	* common.c, fileio.h, fileio.c : Check open files
	  at run-unit termination. Implement sync'ing 
	  with enviroment variable COB_SYNC=Y.
	  Catch signals QUIT, INT and HUP.

2005-11-08  Roger While <simrw@sim-basis.de>

	* fileio.c : Tweaks for LS files

2005-11-04  Roger While <simrw@sim-basis.de>

	* call.c : Don't repeatedly call (lt_)dlopen on 
	  NULL (main program); Do it once at startup.

2005-11-01  Roger While <simrw@sim-basis.de>

	* screenio.c : Cater for include in ncurses/ncurses.h
	* fileio.c : ferror under Cygwin doesn't like a
	  void * parameter - Cast it.
	  Fix line-sequential reads when input has carriage-returns.

2005-10-26  Roger While <simrw@sim-basis.de>

	* fileio.c : Remove HAVE_DB ifdef, fix warnings
	* move.c : Fix warnings

2005-10-25  Roger While <simrw@sim-basis.de>

	* move.h, move.c, numeric.c, fileio.c, strings.c
	  memcpy/memset optimizations
	  move.c : Fix a mpz_ call (optimization)

2005-10-14  Roger While <simrw@sim-basis.de>

	* All : More GCC 4 fixes

2005-10-13  Roger While <simrw@sim-basis.de>

	* common.h, common.c : Fix function type (GCC 4)

2005-08-07  Roger While <simrw@sim-basis.de>

	* All .c : indent, braces
	* call.c : Dynamically allocate areas, const allocation

2005-08-04  Roger While <simrw@sim-basis.de>

	* fileio.c : Harden I/O error checking
	  Replace fputc with putc
	* screenio.c,h : Rename cob_screen_clear to cob_screen_terminate