@@ -27,45 +27,33 @@
 
 #include <sys/types.h>
 
-#ifndef	__BIT_TYPES_DEFINED__
-typedef signed char int8_t;
-typedef unsigned char u_int8_t;
-typedef short int16_t;
-typedef unsigned short u_int16_t;
-typedef int int32_t;
-typedef unsigned int u_int32_t;
-typedef long long int64_t;
-typedef unsigned long long u_int64_t;
-typedef int32_t register_t;
-#endif
-
 /* Basic bit swapping functions
  */
-#define COB_BSWAP_16_CONSTANT(val)	((u_int16_t) (	\
-    (u_int16_t) ((u_int16_t) (val) >> 8) |		\
-    (u_int16_t) ((u_int16_t) (val) << 8)))
-#define COB_BSWAP_32_CONSTANT(val)	((u_int32_t) (		\
-    (((u_int32_t) (val) & (u_int32_t) 0x000000ffU) << 24) |	\
-    (((u_int32_t) (val) & (u_int32_t) 0x0000ff00U) <<  8) |	\
-    (((u_int32_t) (val) & (u_int32_t) 0x00ff0000U) >>  8) |	\
-    (((u_int32_t) (val) & (u_int32_t) 0xff000000U) >> 24)))
-#define COB_BSWAP_64_CONSTANT(val)	((u_int64_t) (	\
-    (((u_int64_t) (val) &				\
-      (u_int64_t) 0x00000000000000ffULL) << 56) |	\
-    (((u_int64_t) (val) &				\
-      (u_int64_t) 0x000000000000ff00ULL) << 40) |	\
-    (((u_int64_t) (val) &				\
-      (u_int64_t) 0x0000000000ff0000ULL) << 24) |	\
-    (((u_int64_t) (val) &				\
-      (u_int64_t) 0x00000000ff000000ULL) <<  8) |	\
-    (((u_int64_t) (val) &				\
-      (u_int64_t) 0x000000ff00000000ULL) >>  8) |	\
-    (((u_int64_t) (val) &				\
-      (u_int64_t) 0x0000ff0000000000ULL) >> 24) |	\
-    (((u_int64_t) (val) &				\
-      (u_int64_t) 0x00ff000000000000ULL) >> 40) |	\
-    (((u_int64_t) (val) &				\
-      (u_int64_t) 0xff00000000000000ULL) >> 56)))
+#define COB_BSWAP_16_CONSTANT(val)	((unsigned short) (	\
+    (unsigned short) ((unsigned short) (val) >> 8) |		\
+    (unsigned short) ((unsigned short) (val) << 8)))
+#define COB_BSWAP_32_CONSTANT(val)	((unsigned int) (		\
+    (((unsigned int) (val) & (unsigned int) 0x000000ffU) << 24) |	\
+    (((unsigned int) (val) & (unsigned int) 0x0000ff00U) <<  8) |	\
+    (((unsigned int) (val) & (unsigned int) 0x00ff0000U) >>  8) |	\
+    (((unsigned int) (val) & (unsigned int) 0xff000000U) >> 24)))
+#define COB_BSWAP_64_CONSTANT(val)	((unsigned long long) (	\
+    (((unsigned long long) (val) &				\
+      (unsigned long long) 0x00000000000000ffULL) << 56) |	\
+    (((unsigned long long) (val) &				\
+      (unsigned long long) 0x000000000000ff00ULL) << 40) |	\
+    (((unsigned long long) (val) &				\
+      (unsigned long long) 0x0000000000ff0000ULL) << 24) |	\
+    (((unsigned long long) (val) &				\
+      (unsigned long long) 0x00000000ff000000ULL) <<  8) |	\
+    (((unsigned long long) (val) &				\
+      (unsigned long long) 0x000000ff00000000ULL) >>  8) |	\
+    (((unsigned long long) (val) &				\
+      (unsigned long long) 0x0000ff0000000000ULL) >> 24) |	\
+    (((unsigned long long) (val) &				\
+      (unsigned long long) 0x00ff000000000000ULL) >> 40) |	\
+    (((unsigned long long) (val) &				\
+      (unsigned long long) 0xff00000000000000ULL) >> 56)))
 
 /* Arch specific stuff for speed
  */
@@ -73,7 +61,7 @@ typedef int32_t register_t;
 #  if defined (__i386__)
 #    define COB_BSWAP_16_IA32(val)				\
        (__extension__						\
-	({ register u_int16_t __v, __x = ((u_int16_t) (val));	\
+	({ register unsigned short __v, __x = ((unsigned short) (val));	\
 	   if (__builtin_constant_p (__x))			\
 	     __v = COB_BSWAP_16_CONSTANT (__x);			\
 	   else							\
@@ -84,7 +72,7 @@ typedef int32_t register_t;
 	    __v; }))
 #    define COB_BSWAP_32_IA32(val)				\
        (__extension__						\
-	({ register u_int32_t __v, __x = ((u_int32_t) (val));	\
+	({ register unsigned int __v, __x = ((unsigned int) (val));	\
 	   if (__builtin_constant_p (__x))			\
 	     __v = COB_BSWAP_32_CONSTANT (__x);			\
 	   else							\
@@ -94,9 +82,9 @@ typedef int32_t register_t;
 	    __v; }))
 #    define COB_BSWAP_64_IA32(val)				\
        (__extension__						\
-	({ union { u_int64_t __ll;				\
-		   u_int32_t __l[2]; } __w, __r;		\
-	   __w.__ll = ((u_int64_t) (val));			\
+	({ union { unsigned long long __ll;				\
+		   unsigned int __l[2]; } __w, __r;		\
+	   __w.__ll = ((unsigned long long) (val));			\
 	   if (__builtin_constant_p (__w.__ll))			\
 	     __r.__ll = COB_BSWAP_64_CONSTANT (__w.__ll);	\
 	   else							\
@@ -112,7 +100,7 @@ typedef int32_t register_t;
 #  elif defined (__ia64__)
 #    define COB_BSWAP_16_IA64(val)				\
        (__extension__						\
-	({ register u_int16_t __v, __x = ((u_int16_t) (val));	\
+	({ register unsigned short __v, __x = ((unsigned short) (val));	\
 	   if (__builtin_constant_p (__x))			\
 	     __v = COB_BSWAP_16_CONSTANT (__x);			\
 	   else							\
@@ -123,7 +111,7 @@ typedef int32_t register_t;
 	    __v; }))
 #    define COB_BSWAP_32_IA64(val)				\
        (__extension__						\
-	 ({ register u_int32_t __v, __x = ((u_int32_t) (val));	\
+	 ({ register unsigned int __v, __x = ((unsigned int) (val));	\
 	    if (__builtin_constant_p (__x))			\
 	      __v = COB_BSWAP_32_CONSTANT (__x);		\
 	    else						\
@@ -134,8 +122,8 @@ typedef int32_t register_t;
 	    __v; }))
 #    define COB_BSWAP_64_IA64(val)				\
        (__extension__						\
-	({ register u_int64_t __v,				\
-	     __x = ((u_int64_t) (val));				\
+	({ register unsigned long long __v,				\
+	     __x = ((unsigned long long) (val));				\
 	   if (__builtin_constant_p (__x))			\
 	     __v = COB_BSWAP_64_CONSTANT (__x);			\
 	   else							\
@@ -149,7 +137,7 @@ typedef int32_t register_t;
 #  elif defined (__x86_64__)
 #    define COB_BSWAP_32_X86_64(val)				\
        (__extension__						\
-	 ({ register u_int32_t __v, __x = ((u_int32_t) (val));	\
+	 ({ register unsigned int __v, __x = ((unsigned int) (val));	\
 	    if (__builtin_constant_p (__x))			\
 	      __v = COB_BSWAP_32_CONSTANT (__x);		\
 	    else						\
@@ -159,7 +147,7 @@ typedef int32_t register_t;
 	    __v; }))
 #    define COB_BSWAP_64_X86_64(val)				\
        (__extension__						\
-	({ register u_int64_t __v, __x = ((u_int64_t) (val));	\
+	({ register unsigned long long __v, __x = ((unsigned long long) (val));	\
 	   if (__builtin_constant_p (__x))			\
 	     __v = COB_BSWAP_64_CONSTANT (__x);			\
 	   else							\
